Fix asteroids targeting, improve difficulty scaling, clean up UI

--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
         </div>
         <div id="start-screen">
             <div class="start-content">
-                <div class="dino-icon">🦖</div>
                 <h1>DINO RUNNER</h1>
                 <p class="subtitle">Umbrella Edition</p>
                 <div class="controls-info">
                     <p><strong>SPACE / J</strong> - Jump over cactus</p>
                     <p><strong>U</strong> - Umbrella (block asteroids)</p>
-                    <p class="warning">⚠️ Can't jump while umbrella is up!</p>
+                    <p class="warning">Can't jump while umbrella is up!</p>
                 </div>
-                <p class="press-start">Press SPACE to Play</p>
+                <p class="press-start">- Press SPACE to Play -</p>
             </div>
         </div>
         <div id="game-over-screen" class="hidden">
