--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
                 <span>HI <span id="highScore">00000</span></span>
                 <span id="currentScore">00000</span>
             </div>
+            <div id="controls-legend">
+                <span>SPACE/J: Jump</span>
+                <span>U: Umbrella</span>
+            </div>
         </div>
         <div id="start-screen">
             <div class="start-content">
