--- a/index.html
+++ b/index.html
@@ -43,7 +43,19 @@
         <!-- Mobile touch controls (shown only on small screens via CSS) -->
         <div id="touch-controls" class="touch-controls">
             <button id="btn-jump" class="touch-btn touch-btn-jump" aria-label="Jump">▲</button>
-            <button id="btn-umbrella" class="touch-btn touch-btn-umbrella" aria-label="Umbrella">☂</button>
+            <button id="btn-umbrella" class="touch-btn touch-btn-umbrella" aria-label="Umbrella">
+                <svg viewBox="0 0 40 36" width="40" height="36">
+                    <!-- Umbrella dome -->
+                    <path d="M2 20 A18 18 0 0 1 38 20" fill="#535353"/>
+                    <!-- Dome edge decorations (white dots like in game) -->
+                    <circle cx="6" cy="20" r="2.5" fill="#fff"/>
+                    <circle cx="14" cy="20" r="2.5" fill="#fff"/>
+                    <circle cx="22" cy="20" r="2.5" fill="#fff"/>
+                    <circle cx="30" cy="20" r="2.5" fill="#fff"/>
+                    <!-- Handle -->
+                    <rect x="18" y="18" width="4" height="16" fill="#535353"/>
+                </svg>
+            </button>
         </div>
     </div>
     <script src="game.js"></script>
