--- a/index.html
+++ b/index.html
@@ -10,20 +10,13 @@
     <div id="game-container">
         <canvas id="gameCanvas" width="800" height="300"></canvas>
         <div id="ui">
-            <div id="score-display">
+            <div id="score-row">
+                <span id="levelDisplay">LV 1</span>
                 <span>HI <span id="highScore">00000</span></span>
                 <span id="currentScore">00000</span>
             </div>
-            <div id="level-pause-row">
-                <span id="levelDisplay">LV 1</span>
-                <button id="btn-pause" class="btn-pause" aria-label="Pause">| |</button>
-            </div>
-            <div id="controls-legend" class="desktop-only">
-                <span>SPACE/J: Jump</span>
-                <span>U: Umbrella</span>
-                <span>P: Pause</span>
-            </div>
         </div>
+        <button id="btn-pause" class="btn-pause" aria-label="Pause">| |</button>
         <div id="start-screen">
             <div class="start-content">
                 <h1>DINO RUNNER</h1>
