Add era-based obstacles: spiky icebergs, coconut piles, fire hydrants

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="start-screen">
             <div class="start-content">
                 <h1>DINO RUNNER</h1>
-                <p class="subtitle">Umbrella Edition</p>
+                <p class="subtitle">Pass 10 Levels to Escape Extinction</p>
                 <div class="controls-info">
                     <p><strong>SPACE / J</strong> - Jump over cactus</p>
                     <p><strong>U</strong> - Umbrella (block asteroids)</p>
