Add sound effects, mute button, and key hints display

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
                 <span id="currentScore">00000</span>
             </div>
         </div>
+        <div id="key-hints" class="key-hints desktop-only">
+            <span>J/SPACE: Jump</span>
+            <span>U: Umbrella</span>
+            <span>P: Pause</span>
+        </div>
+        <button id="btn-mute" class="btn-mute" aria-label="Mute">🔊</button>
         <button id="btn-pause" class="btn-pause" aria-label="Pause">| |</button>
         <div id="start-screen">
             <div class="start-content">
