--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <span>J/SPACE: Jump</span>
             <span>U: Umbrella</span>
             <span>P: Pause</span>
+            <span>M: Mute</span>
         </div>
         <button id="btn-mute" class="btn-mute" aria-label="Mute">🔊</button>
         <button id="btn-pause" class="btn-pause" aria-label="Pause">| |</button>
