Style mute button to match game theme - monochrome with music note symbol

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <span>P: Pause</span>
             <span>M: Mute</span>
         </div>
-        <button id="btn-mute" class="btn-mute" aria-label="Mute">🔊</button>
+        <button id="btn-mute" class="btn-mute" aria-label="Mute">♪</button>
         <button id="btn-pause" class="btn-pause" aria-label="Pause">| |</button>
         <div id="start-screen">
             <div class="start-content">
