Desktop: use Y key to play again instead of Space

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </div>
                         <div class="game-over-buttons">
                             <button id="btn-restart" class="btn-play">PLAY AGAIN</button>
-                            <p class="skip-hint desktop-only">Press SPACE to play again</p>
+                            <p class="skip-hint desktop-only">Press Y to play again</p>
                         </div>
                     </div>
                     
